--- a/src/Projects.css
+++ b/src/Projects.css
@@ -4,7 +4,7 @@
     margin: 0 auto;
     padding: 20px;
     background-color: #f5f5f5;
-    border-radius: 10px;
+    border-radius: 3px;
     box-shadow: 2px 2px 12px #051040;
   }
   
@@ -22,6 +22,17 @@
   
   .projects-container li {
     margin-bottom: 40px;
+    background-color: #e4e2e2;
+    border-radius: 3px;
+    padding: 10px;
+    transition: transform 500ms;
+    transition: .5s ease;
+  }
+
+  .projects-container li:hover {
+    transform: scale(1.01);
+    transition: .5s ease;
+    box-shadow: 2px 2px 12px #051040;
   }
   
   .project-title {
@@ -40,7 +51,7 @@
   
   .project-description {
     line-height: 1.5;
-    color: #777;
+    color: #333;
     width: 100%;
   }
   
@@ -51,4 +62,9 @@
   .project-img {
     width: 100%;
     height: 100%;
+    cursor: pointer;
+  }
+  .project-video {
+    display: flex;
+    justify-content: center;
   }
