--- a/src/Projects.css
+++ b/src/Projects.css
@@ -6,6 +6,14 @@
     background-color: #f5f5f5;
     border-radius: 3px;
     box-shadow: 2px 2px 12px #051040;
+    opacity: 0;
+    transform: translate(0, 10vh);
+    transition: all 2.5s;
+  }
+
+  .projects-container#visible{
+    opacity: 1;
+    transform: translate(0, 0);
   }
   
   .projects-container h2 {
