--- a/src/Projects.css
+++ b/src/Projects.css
@@ -7,19 +7,21 @@
     border-radius: 3px;
     box-shadow: 2px 2px 12px #051040;
     opacity: 0;
-    transform: translate(0, 10vh);
+    transform: translate(0, 20vh);
     transition: all 2.5s;
   }
 
-  .projects-container#visible{
+  .projects-container.visible{
+    transition-delay: .5s;
     opacity: 1;
-    transform: translate(0, 0);
+    transform: translate(0, 10vh);
   }
   
   .projects-container h2 {
     font-size: 2rem;
     text-align: center;
     margin-bottom: 20px;
+    color: #add8e6;
   }
   
   .projects-container ul {
@@ -49,7 +51,7 @@
   }
   
   .project-title a {
-    color: #333;
+    color:#003366;
     text-decoration: none;
   }
   
@@ -65,14 +67,17 @@
   
   .project-description p {
     margin-bottom: 10px;
+    color: #006400;
   }
   
   .project-img {
     width: 100%;
     height: 100%;
     cursor: pointer;
+    border: 2px solid #ffa500;
   }
   .project-video {
     display: flex;
     justify-content: center;
+    border: 2px solid #008080;
   }
